refactoring and fixing deprecatations